// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product List Paging Component should render adequately for last page 1`] = `
<div class="product-list-paging">
  <a href="/some/followup/link?page=2">«</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=1">1</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=2">2</a
  ><a class="active" ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=3">3</a>
</div>
`;

exports[`Product List Paging Component should render adequately for middle page 1`] = `
<div class="product-list-paging">
  <a href="/some/followup/link?page=1">«</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=1">1</a
  ><a class="active" ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=2">2</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=3">3</a
  ><a href="/some/followup/link?page=3">»</a>
</div>
`;

exports[`Product List Paging Component should render adequately for starting page 1`] = `
<div class="product-list-paging">
  <a class="active" ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=1">1</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=2">2</a
  ><a ng-reflect-ng-class="[object Object]" href="/some/followup/link?page=3">3</a
  ><a href="/some/followup/link?page=2">»</a>
</div>
`;
